[package]
name = "wv"
version = "0.1.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.6.3"
aubio-rs = "0.1.3"
hound = "3.4.0"
anyhow = "1.0.34"
cpal = "0.13.0"
rosc = "0.4.2"
ableton-link = "0.1.0"

[patch.crates-io]
aubio-rs = {path = "../aubio-rs/aubio-rs" }
ableton-link = {git = "https://github.com/dir-ableton/ableton-link-rs.git", branch = 'session-state-commit'}
